# wvp_sound_analysis

./: .gitignore  analyze_birds_v1.py  pyproject.toml
