[project]
name = "wvp-sound-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "A.S.Boerema",email = "paraiko@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib (>=3.10.1,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "molgenis-emx2-pyclient (>=11.61.2,<12.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
